manifests/applications/b4mad-matrix/dendrite/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dendrite
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8008
      targetPort: 8008
